# python_template

./: pyproject.toml
dados/: cabeçalho.aux  cabeçalho.dvi  cabeçalho.out  cabeçalho.tex  cabeçalho.toc
relatorio/: cria.py
relatório/: cria.py
testes/relat/: test_cria.py
