[tool.poetry]
name = "primeiro projeto"
version = "0.1.0"
description = "gerador de relatórios em LATEX"
authors = ["Kauan Mariani Ferreira"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
